--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
+*{
+  margin:0;
+  padding:0;
+}
+
+
+
 :root {
-    --primary-color:green;
+    --primary-color:rgb(149, 233, 149);
    
   }
   
@@ -10,7 +17,7 @@
   
   .navigation {
       background-color: var(--primary-color);
-      padding: 1rem;
+      padding: 3rem;
       
     }
   
@@ -48,10 +55,12 @@
       margin: 1rem;
       padding: 1rem;
       border-style: none;
+      font-weight: bold;
+     
       
   }
    p{
-      padding:1rem;
+      padding: 1rem;
    }
   
   
@@ -64,7 +73,7 @@
   
   footer {
       background-color: var(--primary-color);
-      padding: 1rem;
+      padding: 3rem;
       text-align: center;
       
       
